Updated font-size, fixed alignment

--- a/mt.css
+++ b/mt.css
@@ -2,18 +2,27 @@ body {
     background: rgb(37, 34, 34);    
     color: rgb(174, 164, 164);
     font-family: monospace;
+    font-size: 32px;
     padding: 2rem;
-    text-align: center;
+    /* width: 65%; */
+    /* text-align: center; */
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    position: relative;
+    top: -75px;
 }
 
 h1 {
-    font-size: 14px;
+    font-size: 24px;
 }
 
 .typing-container {
     margin: 20px auto;
-    width: 80%;
+    width: 60%;
     border: 2px solid #fff;
     border-radius: 10px;
     border: none;
@@ -22,10 +31,11 @@ h1 {
     /* background: rgb(37, 34, 34); */
     text-align: left;
     box-sizing: border-box;
+    position: relative;
 }
 
 .sentence {
-    font-size: 14px;
+    /* font-size: 1rem; */
     margin: 0px; 
     color: gray;
     white-space: pre-wrap;
@@ -34,7 +44,7 @@ h1 {
 
 .sentence span {
     display: inline-block;
-    font-size: 14px;
+    /* font-size: 14px; */
     font-family: monospace;
 }
 
@@ -66,7 +76,7 @@ button:hover {
 
 #timer {
     color: #e9bd2f;
-    font-size: 12px;
+    /* font-size: 12px; */
     font-weight: bold;
     margin: 0px;
 }
